--- a/GAMES/19MSP.html
+++ b/GAMES/19MSP.html
@@ -187,8 +187,30 @@
         <tbody>
             <tr>
                 <td class="serial-num">8</td>
-                <td class="days"><small></small></td>
+                <td class="days"><small>20th Nov</small></td>
                 
+                <!-- winning-->
+                <td class="winning">12</td>
+                <td class="winning">23</td>
+                <td class="winning">69</td>
+                <td class="winning">62</td>
+                <td class="winning" id="lbw">84</td>
+
+                <!-- machine-->
+                <td class="machine" id="fbm">74</td>
+                <td class="machine">33</td>
+                <td class="machine">76</td>
+                <td class="machine">53</td>
+                <td class="machine" id="lbm">8</td>
+            </tr>
+        </tbody>
+
+                                <!-- day16-->
+        <tbody>
+            <tr>
+                <td class="serial-num">9</td>
+                <td class="days"><small></small></td>
+            
                 <!-- winning-->
                 <td class="winning"></td>
                 <td class="winning"></td>
