--- a/GAMES/8Bingo.html
+++ b/GAMES/8Bingo.html
@@ -339,6 +339,27 @@
         <tbody>
             <tr>
                 <td class="serial-num">15</td>
+                <td class="days"><small>mon 20th Nov</small></td>
+            
+                <!-- winning-->
+                <td class="winning">9</td>
+                <td class="winning">88</td>
+                <td class="winning">29</td>
+                <td class="winning">47</td>
+                <td class="winning" id="lbw">57</td>
+
+                <!-- machine-->
+                <td class="machine" id="fbm">38</td>
+                <td class="machine">4</td>
+                <td class="machine">16</td>
+                <td class="machine">86</td>
+                <td class="machine" id="lbm">40</td>
+            </tr>
+        </tbody>
+
+        <tbody>
+            <tr>
+                <td class="serial-num">16</td>
                 <td class="days"><small></small></td>
             
                 <!-- winning-->
