--- a/GAMES/9Metro.html
+++ b/GAMES/9Metro.html
@@ -342,6 +342,28 @@
         <tbody>
             <tr>
                 <td class="serial-num">15</td>
+                <td class="days"><small>mon 20th Nov</small></td>
+            
+                <!-- winning-->
+                <td class="winning">69</td>
+                <td class="winning">45</td>
+                <td class="winning">1</td>
+                <td class="winning">34</td>
+                <td class="winning" id="lbw">16</td>
+
+                <!-- machine-->
+                <td class="machine" id="fbm">47</td>
+                <td class="machine">53</td>
+                <td class="machine">29</td>
+                <td class="machine">7</td>
+                <td class="machine" id="lbm">27</td>
+            </tr>
+        </tbody>
+
+                                <!-- day16-->
+        <tbody>
+            <tr>
+                <td class="serial-num">16</td>
                 <td class="days"><small></small></td>
             
                 <!-- winning-->
