--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -11,20 +11,21 @@
             margin: 2rem;
             text-align: center;
         }
+        nav a {
+            font-size: 30px;
+        }
 
         main {
             display: flex;
             place-content: center;
-            gap: 20px;
+            gap: 3rem;
             
         }
         section {
             color: #fff;
             width: 300px;
-            /* height: 600px; */
             text-align: center;
-            padding: 5px 10px;
-            background-color: #000000d7;
+            box-shadow: 2px 2px 5px 0px #000;
             border-radius: 5px;
         }
         article {
@@ -32,27 +33,30 @@
         }
         .date {
             text-transform: uppercase;
+            background-color: #000;
             border-bottom: 1px solid #f5f5f5;
+            border-radius: 10px;
         } 
         .game {
             color: lightblue;
+            color: #000;
             text-decoration: underline;
             text-transform: uppercase;
         }
         p {
             line-height: 1;
-            font-size: 20px;
+            font-weight: bolder;
+            font-size: 25px;
         }
         span {
             padding: 5px;
-            background-color: #ff0000;
             border-radius: 50px;
         }
         .winning {
-            background-color: #008000;
+            color: #0000ff;
         }
         .machine {
-            background-color: #ff0000;
+            color: #ff0000;
         }
 
             @media screen and (max-width: 600px) {
@@ -73,39 +77,6 @@
         </nav>
     </header>
     <main>
-        <section>
-            <h2 class="date">saturday 18/11/2023</h2>
-            <article>
-                <h3 class="game">Premier King</h3>
-                <p>W: <span class="winning">62</span> - <span class="winning">31</span> - <span class="winning">81</span> - <span class="winning">86</span> - <span class="winning">70</span></p>
-                <p>M: <span class="machine">76</span> - <span class="machine">33</span> - <span class="machine">55</span> - <span class="machine">56</span> - <span class="machine">35</span></p>
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p>W: <span class="winning">90</span> - <span class="winning">5</span> - <span class="winning">35</span> - <span class="winning">32</span> - <span class="winning">72</span></p>
-                <p>M: <span class="machine">52</span> - <span class="machine">84</span> - <span class="machine">34</span> - <span class="machine">75</span> - <span class="machine">81</span></p>
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p>W: <span class="winning">63</span> - <span class="winning">86</span> - <span class="winning">41</span> - <span class="winning">73</span> - <span class="winning">88</span></p>
-                <p>M: <span class="machine">24</span> - <span class="machine">11</span> - <span class="machine">83</span> - <span class="machine">70</span> - <span class="machine">67</span></p>
-            </article>
-            <article>
-                <h3 class="game">O6</h3>
-                <p>W: <span class="winning">58</span> - <span class="winning">82</span> - <span class="winning">88</span> - <span class="winning">56</span> - <span class="winning">39</span></p>
-                <p>M: <span class="machine">81</span> - <span class="machine">90</span> - <span class="machine">38</span> - <span class="machine">24</span> - <span class="machine">74</span></p>
-            </article>
-            <article>
-                <h3 class="game">National</h3>
-                <p>W: <span class="winning">82</span> - <span class="winning">77</span> - <span class="winning">16</span> - <span class="winning">33</span> - <span class="winning">20</span></p>
-                <p>M: <span class="machine">10</span> - <span class="machine">24</span> - <span class="machine">88</span> - <span class="machine">34</span> - <span class="machine">37</span></p>
-            </article>
-            <article>
-                <h3 class="game">fair chance</h3>
-                <p>W: <span class="winning">65</span> - <span class="winning">54</span> - <span class="winning">4</span> - <span class="winning">52</span> - <span class="winning">71</span></p>
-                <p>M: <span class="machine">15</span> - <span class="machine">25</span> - <span class="machine">90</span> - <span class="machine">47</span> - <span class="machine">58</span></p>
-            </article>
-        </section>
         <section>
             <h2 class="date"> Sunday 19/11/2023</h2>
             <article>
@@ -137,6 +108,39 @@
                 <h3 class="game">Tota</h3>
                 <p>W: <span class="winning">64</span> - <span class="winning">2</span> - <span class="winning">28</span> - <span class="winning">41</span> - <span class="winning">80</span></p>
                 <p>M: <span class="machine">32</span> - <span class="machine">51</span> - <span class="machine">37</span> - <span class="machine">47</span> - <span class="machine">19</span></p>
+            </article>
+        </section>
+        <section>
+            <h2 class="date">Monday 20/11/2023</h2>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p>W: <span class="winning">15</span> - <span class="winning">19</span> - <span class="winning">83</span> - <span class="winning">63</span> - <span class="winning">20</span></p>
+                <p>M: <span class="machine">35</span> - <span class="machine">86</span> - <span class="machine">42</span> - <span class="machine">27</span> - <span class="machine">17</span></p>
+            </article>
+            <article>
+                <h3 class="game">People</h3>
+                <p>W: <span class="winning">89</span> - <span class="winning">76</span> - <span class="winning">42</span> - <span class="winning">83</span> - <span class="winning">52</span></p>
+                <p>M: <span class="machine">55</span> - <span class="machine">8</span> - <span class="machine">53</span> - <span class="machine">26</span> - <span class="machine">35</span></p>
+            </article>
+            <article>
+                <h3 class="game">Bingo</h3>
+                <p>W: <span class="winning">9</span> - <span class="winning">88</span> - <span class="winning">29</span> - <span class="winning">47</span> - <span class="winning">57</span></p>
+                <p>M: <span class="machine">38</span> - <span class="machine">4</span> - <span class="machine">16</span> - <span class="machine">86</span> - <span class="machine">40</span></p>
+            </article>
+            <article>
+                <h3 class="game">Metro</h3>
+                <p>W: <span class="winning">69</span> - <span class="winning">45</span> - <span class="winning">1</span> - <span class="winning">34</span> - <span class="winning">16</span></p>
+                <p>M: <span class="machine">47</span> - <span class="machine">53</span> - <span class="machine">29</span> - <span class="machine">7</span> - <span class="machine">27</span></p>
+            </article>
+            <article>
+                <h3 class="game">MSP</h3>
+                <p>W: <span class="winning">12</span> - <span class="winning">23</span> - <span class="winning">69</span> - <span class="winning">62</span> - <span class="winning">84</span></p>
+                <p>M: <span class="machine">74</span> - <span class="machine">33</span> - <span class="machine">76</span> - <span class="machine">53</span> - <span class="machine">8</span></p>
+            </article>
+            <article>
+                <h3 class="game">International</h3>
+                <p>W: <span class="winning"></span> - <span class="winning"></span> - <span class="winning"></span> - <span class="winning"></span> - <span class="winning"></span></p>
+                <p>M: <span class="machine"></span> - <span class="machine"></span> - <span class="machine"></span> - <span class="machine"></span> - <span class="machine"></span></p>
             </article>
         </section>
     </main>
