--- a/GAMES/18MSP.html
+++ b/GAMES/18MSP.html
@@ -675,11 +675,11 @@
                     <td class="winning" id="lbw">69</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">31</td>
+                    <td class="machine">25</td>
+                    <td class="machine">6</td>
+                    <td class="machine">29</td>
+                    <td class="machine" id="lbm">54</td>
                 </tr>
             </tbody>
 
