--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago results">
-            <h2 class="date">sunday 7/4/2024</h2>
-            <article>
-                <h3 class="game">Royal</h3>
-                <p class="winning">48 - 60 - 63 - 79 - 31</p>
-                <p class="machine">72 - 35 - 46 - 82 - 49</p>        
-            </article>
-            <article>
-                <h3 class="game">mark ii</h3>
-                <p class="winning">23 - 4 - 63 - 74 - 17</p>
-                <p class="machine">52 - 61 - 39 - 43 - 62</p>        
-            </article>
-            <article>
-                <h3 class="game">Enugu</h3>
-                <p class="winning">37 - 56 - 85 - 25 - 82</p>
-                <p class="machine">45 - 77 - 32 - 55 - 48</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky</h3>
-                <p class="winning">13 - 49 - 11 - 61 - 64</p>
-                <p class="machine">6 - 32 - 18 - 75 - 30</p>        
-            </article>
-            <article>
-                <h3 class="game">Aseda</h3>
-                <p class="winning">81 - 51 - 74 - 32 - 87</p>
-                <p class="machine">38 - 57 - 55 - 30 - 77</p>        
-            </article>
-            <article>
-                <h3 class="game">Tota</h3>
-                <p class="winning">70 - 86 - 54 - 31 - 76</p>
-                <p class="machine">61 - 71 - 25 - 63 - 15</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">monday 8/4/2024</h2>
             <article>
                 <h3 class="game">Diamond</h3>
@@ -256,12 +222,46 @@
             <article>
                 <h3 class="game">MSP</h3>
                 <p class="winning">46 - 70 - 16 - 53 - 69</p>
-                <p class="machine"></p>        
+                <p class="machine">31 - 25 - 6 - 29 - 54</p>        
             </article>
             <article>
                 <h3 class="game">International</h3>
                 <p class="winning">82 - 28 - 68 - 89 - 71</p>
                 <p class="machine">70 - 24 - 45 - 31 - 7</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">tuesday 9/4/2024</h2>
+            <article>
+                <h3 class="game">Gold</h3>
+                <p class="winning">69 - 38 - 56 - 83 - 11</p>
+                <p class="machine">49 - 47 - 55 - 46 - 25</p>        
+            </article>
+            <article>
+                <h3 class="game">06</h3>
+                <p class="winning">85 - 64 - 26 - 30 - 88</p>
+                <p class="machine">17 - 13 - 76 - 32 - 52</p>        
+            </article>
+            <article>
+                <h3 class="game">Jackpot</h3>
+                <p class="winning">90 - 6 - 55 - 68 - 3</p>
+                <p class="machine">5 - 86 - 57 - 43 - 38</p>        
+            </article>
+            <article>
+                <h3 class="game">Club Master</h3>
+                <p class="winning">73 - 80 - 45 - 84 - 66</p>
+                <p class="machine">42 - 36 - 47 - 89 - 77</p>        
+            </article>
+            <article>
+                <h3 class="game">Lucky-g</h3>
+                <p class="winning">39 - 59 - 5 - 84 - 57</p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game">Super</h3>
+                <p class="winning">84 - 11 - 86 - 74 - 46</p>
+                <p class="machine">28 - 44 - 5 - 22 - 67</p>        
             </article>
         </section>
     </div>
